add route /surveys/{code} update SurveyController to take into account response
